@@ -88,7 +88,7 @@ $TCA["tx_bzdstaffdirectory_persons"] = Array (
 				"foreign_table_where" => "ORDER BY tx_bzdstaffdirectory_groups.uid",	
 				"size" => 4,	
 				"minitems" => 0,
-				"maxitems" => 20,	
+				"maxitems" => 99,	
 				"MM" => "tx_bzdstaffdirectory_persons_usergroups_mm",	
 				"wizards" => Array(
 					"_PADDING" => 2,
@@ -375,7 +375,7 @@ $TCA["tx_bzdstaffdirectory_groups"] = Array (
 				"foreign_table_where" => "ORDER BY tx_bzdstaffdirectory_persons.uid",	
 				"size" => 4,	
 				"minitems" => 0,
-				"maxitems" => 20,	
+				"maxitems" => 99,	
 				"MM" => "tx_bzdstaffdirectory_groups_teamleaders_mm",	
 				"wizards" => Array(
 					"_PADDING" => 2,
@@ -403,7 +403,7 @@ $TCA["tx_bzdstaffdirectory_groups"] = Array (
 				'foreign_table_where' => 'ORDER BY tx_bzdstaffdirectory_persons.last_name',
 				'size' => 4,
 				'minitems' => 0,
-				'maxitems' => 20,
+				'maxitems' => 9999,
 				'MM' => 'tx_bzdstaffdirectory_persons_usergroups_mm | foreign',
 				'wizards' => Array(
 					'_PADDING' => 2,
