@@ -1,4 +1,5 @@
 version 0.5.0 - currently working on
+- Change: Changed the maxItems for teamMembers to 9999 (#499)
 - Feature: Added French translation (thanks Florian!) (#734)
 - Fix: Dependecies in the EM fixed (#739)
 - Fix: Sorting in the "grouped" list view (#732)
